# fic-dashboard

./: .gitignore  README.md  app.py  database.py  mock_api.py  package.json  pnpm-lock.yaml  process_deps.py  prompt.txt  pyproject.toml  recreate_db.py  requirements.txt  scheduler.py  tailwind.config.js
src/fic_dashboard/: __init__.py
static/css/: style.css
static/js/: main.js
templates/: index.html  login.html
