[project]
name = "fic-dashboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zibo Wang", email = "zibo.w@outlook.com" }
]
dependencies = [
    "flask>=3.1.0",
    "duckdb>=1.2.2",
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fic_dashboard"]
